# azpool

./: Cargo.toml  README.md  backend-setup.env  backend-setup.sh  instance-setup.env  instance-setup.sh  push.ps1
config/: azcoin-template-provider.toml.example
deploy/scripts/: build-support-node.sh  discover-sc-node-current-state.sh  install-azc-payout-readonly-wrapper.sh  install-azcoin-sc-node-fresh-cycle-automation.sh  install-azcoin-sc-node-payout-scheduler.sh  install-sc-node-pool-ledger.sh  install-support-node.sh  smoke-test-support-node.sh
deploy/systemd/: azcoin-pool-collector.service  azcoin-pool-collector.timer  azcoin-sc-node-fresh-cycle-automation.service  azcoin-sc-node-fresh-cycle-automation.timer.template  azcoin-sc-node-payout-scheduler.service  azcoin-sc-node-payout-scheduler.timer  azcoin-sc-node-payout-scheduler.timer.template  azcoin-template-provider.service  collector.env.example  fresh-cycle-automation.env.example  payout-scheduler.env.example
deploy/wallet-wrappers/: azc-payout-readonly-guard.sh  azc-payout-readonly.sh
docs/: template-provider-runbook.md
docs/adr/: ADR-azpool-templar-canonical-source.md  ADR-pool-ledger-legacy-cleanup-plan.md  ADR-sc-node-chunked-payout-reconciliation.md  ADR-sc-node-credit-ledger.md  ADR-sc-node-manual-approved-periodic-payout-runner.md  ADR-sc-node-payout-address-registry.md  (+11 more)
payouts/: README.md
scripts/: azcoin-install.sh  pool-install.sh  templar-install.sh  translator-install.sh
src/: config.rs  main.rs  poller.rs  rpc.rs  template.rs  tp_server.rs
templar/: Cargo.toml  README.md  push.sh
(+137 files in other folders)
